--- a/analysis/prognosis/Prognosis_final_July/Reshuffling/Untitled.ipynb
+++ b/analysis/prognosis/Prognosis_final_July/Reshuffling/Untitled.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"eln_age\"\n",
-      "[1] \"start CV\"\n",
-      "[1] \"start CV\"\n",
-      "[1] \"start CV\"\n",
-      "[1] \"start CV\"\n",
-      "[1] \"start CV\"\n",
-      "[1] \"start CV\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(glmnet)\n",
     "library(doMC)\n",
@@ -43,7 +29,9 @@
     "all_gen <- c(2:85)\n",
     "vect <- apply(X=df_final[,all_gen],2,FUN=function(x) 100*length(which(x==1))/dim(df_final)[1])\n",
     "gen <- match(names(vect[vect>=2]),names(df_final))\n",
-    "cyto <- c(86:154)\n",
+    "all_cyto <- c(86:154)\n",
+    "vect <- apply(X=df_final[,all_cyto],2,FUN=function(x) 100*length(which(x==1))/dim(df_final)[1])\n",
+    "cyto <- match(names(vect[vect>=2]),names(df_final))\n",
     "clin <- c(155:161)\n",
     "demo <- c(162:163)\n",
     "demo_without_age <-c(162)\n",
@@ -86,7 +74,6 @@
     "eln_comp_age_gen_cyto <- c(eln_comp_age_gen,cyto)\n",
     "eln_comp_age_gen_clin <- c(eln_comp_age_gen,clin)\n",
     "eln_comp_age_gen_demo <- c(eln_comp_age_gen,demo)\n",
-    "eln_comp_age_gen_demo_without_age <- c(eln_comp_age_gen,demo_without_age)\n",
     "\n",
     "eln_comp_gen_cyto_clin_demo <- c(eln_comp_gen_cyto,clin,demo)\n",
     "\n",
@@ -111,7 +98,7 @@
     "eln_age_gen_cyto <- c(eln_age_gen,cyto)\n",
     "eln_age_gen_clin <- c(eln_age_gen,clin)\n",
     "eln_age_gen_demo <- c(eln_age_gen,demo)\n",
-    "eln_age_gen_demo_without_age <- c(eln_age_gen,demo_without_age)\n",
+    "\n",
     "\n",
     "eln_gen_cyto_clin_demo <- c(eln_gen_cyto,clin,demo)\n",
     "\n",
@@ -148,7 +135,13 @@
     "##---------------------------------------------------------------------------------PREPARING MODELS and ALGOS\n",
     "\n",
     "\n",
-    "prognosis_features<-list(eln_age=eln_age)\n",
+    "prognosis_features<-list(eln_comp_gen_demo_without_age=eln_comp_gen_demo_without_age,eln_comp_cyto_clin=eln_comp_cyto_clin,eln_comp_cyto_demo=eln_comp_cyto_demo,eln_comp_cyto_demo_without_age=eln_comp_cyto_demo_without_age,\n",
+    "                         eln_comp_clin_demo=eln_comp_clin_demo,eln_comp_clin_demo_without_age=eln_comp_clin_demo_without_age,eln_comp_age_gen_cyto=eln_comp_age_gen_cyto,eln_comp_age_gen_clin=eln_comp_age_gen_clin,\n",
+    "                         eln_comp_age_gen_demo=eln_comp_age_gen_demo,eln_comp_age_gen_demo_without_age=eln_comp_age_gen_demo_without_age,eln_comp_gen_cyto_clin_demo=eln_comp_gen_cyto_clin_demo,\n",
+    "                        cyto=cyto,eln_cyto=eln_cyto,eln_comp_cyto=eln_comp_cyto,eln_comp_age_cyto=eln_comp_age_cyto,eln_comp_gen_cyto=eln_comp_gen_cyto,eln_gen_cyto_clin_demo=eln_gen_cyto_clin_demo,\n",
+    "                        eln_age_cyto=eln_age_cyto,eln_gen_cyto=eln_gen_cyto,eln_cyto_clin=eln_cyto_clin,eln_cyto_demo=eln_cyto_demo,eln_cyto_demo_without_age=eln_cyto_demo_without_age,eln_age_gen_cyto=eln_age_gen_cyto,\n",
+    "                        comp_cyto=comp_cyto,comp_gen_cyto=comp_gen_cyto,comp_gen_cyto_clin_demo,gen_cyto=gen_cyto,gen_cyto_clin_demo=gen_cyto_clin_demo,cyto_age=cyto_age,\n",
+    "                         cyto_clin=cyto_clin,cyto_demo=cyto_demo,cyto_clin_demo=cyto_clin_demo,cyto_gen_demo=cyto_gen_demo,gen_demo_without_age=gen_demo_without_age,clin_age=clin_age)\n",
     "\n",
     "                         \n",
     " \n",
@@ -156,7 +149,7 @@
     "### PARAMETERS OF ANALYSIS:\n",
     "nrepeats=5\n",
     "seed=1234\n",
-    "mc.cores=1\n",
+    "mc.cores=20\n",
     "npermutations=4\n",
     "nfolds=5\n",
     "\n",
