--- a/analysis/prognosis/Prognosis_final_July/SVM_Prognosis.ipynb
+++ b/analysis/prognosis/Prognosis_final_July/SVM_Prognosis.ipynb
@@ -46,36 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['eln_2017_ratio', 'final_component_additions',\n",
-       "       'final_component_BAGE3_KMT2C', 'final_component_CEBPA_bi',\n",
-       "       'final_component_chr_splicing_1',\n",
-       "       'final_component_chr_splicing_multiple',\n",
-       "       'final_component_DNMT3A_IDH1_2', 'final_component_inv_3',\n",
-       "       'final_component_KIT_NRAS', 'final_component_not_assigned',\n",
-       "       ...\n",
-       "       'inv_3', 'ahd', 'perf_status', 'bm_blasts', 'secondary', 'wbc', 'hb',\n",
-       "       'plt', 'gender', 'age'],\n",
-       "      dtype='object', length=129)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_final.iloc[:,eln_comp_gen_cyto_clin_demo ].columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +55,15 @@
     "eln = [0]\n",
     "comp =list(range(163,178)) \n",
     "age = [162]\n",
+    "\n",
     "all_gen = list(range(1,85))\n",
-    "\n",
     "tmp = df_final.iloc[:,all_gen][df_final.iloc[:,all_gen] >0].count()\n",
-    "\n",
     "gen = [df_final.columns.get_loc(c) for c in tmp[tmp>df_final.shape[0]*0.02].keys() if c in df_final]\n",
     "\n",
-    "cyto = list(range(85,154))\n",
+    "all_cyto = list(range(85,154))\n",
+    "tmp = df_final.iloc[:,all_cyto][df_final.iloc[:,all_cyto] >0].count()\n",
+    "cyto = [df_final.columns.get_loc(c) for c in tmp[tmp>df_final.shape[0]*0.02].keys() if c in df_final]\n",
+    "\n",
     "clin =list(range(154,161))\n",
     "demo = [161,162]\n",
     "demo_without_age = [161]\n",
@@ -239,7 +212,7 @@
     "eln_comp_age_gen_demo,eln_comp_gen_cyto_clin_demo,eln_age_gen,eln_age_cyto,eln_age_clin,eln_gen_cyto,eln_gen_clin,eln_gen_demo,eln_gen_demo_without_age,\n",
     "eln_cyto_clin,eln_cyto_demo,eln_cyto_demo_without_age,eln_clin_demo,eln_clin_demo_without_age)))\n",
     "estimator = FastSurvivalSVM(max_iter=1000, tol=1e-6, random_state=17)\n",
-    "param_grid = {'alpha': 10. ** np.array([-6,-5,-2.5,-1,0]),'optimizer':[\"avltree\"]}\n",
+    "param_grid = {'alpha': 10. ** np.array([-6,-5,-4,-3,-2,-1,0]),'optimizer':[\"avltree\"]}\n",
     "cv = ShuffleSplit(n_splits=5,random_state=17)\n",
     "gcv = GridSearchCV(estimator, param_grid, scoring=score_survival_model,\n",
     "                   n_jobs=50, iid=False, refit=True,\n",
@@ -273,7 +246,7 @@
     " cyto_age,cyto_clin,cyto_demo,gen_demo_without_age,cyto_clin_demo,cyto_gen_demo,clin_age)))\n",
     "\n",
     "estimator = FastSurvivalSVM(max_iter=1000, tol=1e-6, random_state=17)\n",
-    "param_grid = {'alpha': 10. ** np.array([-6,-5,-2.5,-1,0]),'optimizer':[\"avltree\"]}\n",
+    "param_grid = {'alpha': 10. ** np.array([-6,-5,-4,-3,-2,-1,0]),'optimizer':[\"avltree\"]}\n",
     "cv = ShuffleSplit(n_splits=5,random_state=17)\n",
     "gcv = GridSearchCV(estimator, param_grid, scoring=score_survival_model,\n",
     "                   n_jobs=50, iid=False, refit=True,\n",
@@ -305,249 +278,6 @@
    "outputs": [],
    "source": [
     "df.join(df1).to_csv(\"SVM.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>eln</th>\n",
-       "      <th>comp</th>\n",
-       "      <th>gen</th>\n",
-       "      <th>cyto</th>\n",
-       "      <th>clin</th>\n",
-       "      <th>demo</th>\n",
-       "      <th>eln_comp</th>\n",
-       "      <th>eln_age</th>\n",
-       "      <th>eln_gen</th>\n",
-       "      <th>eln_cyto</th>\n",
-       "      <th>...</th>\n",
-       "      <th>eln_age_clin</th>\n",
-       "      <th>eln_gen_cyto</th>\n",
-       "      <th>eln_gen_clin</th>\n",
-       "      <th>eln_gen_demo</th>\n",
-       "      <th>eln_gen_demo_without_age</th>\n",
-       "      <th>eln_cyto_clin</th>\n",
-       "      <th>eln_cyto_demo</th>\n",
-       "      <th>eln_cyto_demo_without_age</th>\n",
-       "      <th>eln_clin_demo</th>\n",
-       "      <th>eln_clin_demo_without_age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.608907</td>\n",
-       "      <td>0.629983</td>\n",
-       "      <td>0.637071</td>\n",
-       "      <td>0.575557</td>\n",
-       "      <td>0.588574</td>\n",
-       "      <td>0.690158</td>\n",
-       "      <td>0.636938</td>\n",
-       "      <td>0.704671</td>\n",
-       "      <td>0.645507</td>\n",
-       "      <td>0.615548</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.710428</td>\n",
-       "      <td>0.650363</td>\n",
-       "      <td>0.656621</td>\n",
-       "      <td>0.710819</td>\n",
-       "      <td>0.644050</td>\n",
-       "      <td>0.661711</td>\n",
-       "      <td>0.695218</td>\n",
-       "      <td>0.620679</td>\n",
-       "      <td>0.710992</td>\n",
-       "      <td>0.652423</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.603909</td>\n",
-       "      <td>0.624365</td>\n",
-       "      <td>0.632087</td>\n",
-       "      <td>0.576941</td>\n",
-       "      <td>0.621896</td>\n",
-       "      <td>0.681443</td>\n",
-       "      <td>0.633654</td>\n",
-       "      <td>0.694363</td>\n",
-       "      <td>0.650553</td>\n",
-       "      <td>0.623082</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.714859</td>\n",
-       "      <td>0.654995</td>\n",
-       "      <td>0.682280</td>\n",
-       "      <td>0.694233</td>\n",
-       "      <td>0.650033</td>\n",
-       "      <td>0.678593</td>\n",
-       "      <td>0.694395</td>\n",
-       "      <td>0.629919</td>\n",
-       "      <td>0.714518</td>\n",
-       "      <td>0.673006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.600245</td>\n",
-       "      <td>0.653404</td>\n",
-       "      <td>0.644230</td>\n",
-       "      <td>0.597049</td>\n",
-       "      <td>0.619835</td>\n",
-       "      <td>0.639417</td>\n",
-       "      <td>0.642074</td>\n",
-       "      <td>0.655310</td>\n",
-       "      <td>0.656123</td>\n",
-       "      <td>0.627907</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.679393</td>\n",
-       "      <td>0.656014</td>\n",
-       "      <td>0.681972</td>\n",
-       "      <td>0.680206</td>\n",
-       "      <td>0.652701</td>\n",
-       "      <td>0.674376</td>\n",
-       "      <td>0.669782</td>\n",
-       "      <td>0.623687</td>\n",
-       "      <td>0.679706</td>\n",
-       "      <td>0.655560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.632842</td>\n",
-       "      <td>0.650995</td>\n",
-       "      <td>0.653389</td>\n",
-       "      <td>0.580297</td>\n",
-       "      <td>0.611555</td>\n",
-       "      <td>0.702098</td>\n",
-       "      <td>0.668029</td>\n",
-       "      <td>0.728355</td>\n",
-       "      <td>0.661280</td>\n",
-       "      <td>0.638741</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.735371</td>\n",
-       "      <td>0.661083</td>\n",
-       "      <td>0.682071</td>\n",
-       "      <td>0.729638</td>\n",
-       "      <td>0.658941</td>\n",
-       "      <td>0.679157</td>\n",
-       "      <td>0.720786</td>\n",
-       "      <td>0.635338</td>\n",
-       "      <td>0.734552</td>\n",
-       "      <td>0.681378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.611693</td>\n",
-       "      <td>0.651032</td>\n",
-       "      <td>0.646689</td>\n",
-       "      <td>0.594680</td>\n",
-       "      <td>0.582525</td>\n",
-       "      <td>0.672501</td>\n",
-       "      <td>0.652518</td>\n",
-       "      <td>0.688429</td>\n",
-       "      <td>0.655785</td>\n",
-       "      <td>0.628521</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.697823</td>\n",
-       "      <td>0.659246</td>\n",
-       "      <td>0.667764</td>\n",
-       "      <td>0.704615</td>\n",
-       "      <td>0.655874</td>\n",
-       "      <td>0.648239</td>\n",
-       "      <td>0.690501</td>\n",
-       "      <td>0.628312</td>\n",
-       "      <td>0.697935</td>\n",
-       "      <td>0.640082</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 47 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        eln      comp       gen      cyto      clin      demo  eln_comp  \\\n",
-       "0  0.608907  0.629983  0.637071  0.575557  0.588574  0.690158  0.636938   \n",
-       "1  0.603909  0.624365  0.632087  0.576941  0.621896  0.681443  0.633654   \n",
-       "2  0.600245  0.653404  0.644230  0.597049  0.619835  0.639417  0.642074   \n",
-       "3  0.632842  0.650995  0.653389  0.580297  0.611555  0.702098  0.668029   \n",
-       "4  0.611693  0.651032  0.646689  0.594680  0.582525  0.672501  0.652518   \n",
-       "\n",
-       "    eln_age   eln_gen  eln_cyto            ...              eln_age_clin  \\\n",
-       "0  0.704671  0.645507  0.615548            ...                  0.710428   \n",
-       "1  0.694363  0.650553  0.623082            ...                  0.714859   \n",
-       "2  0.655310  0.656123  0.627907            ...                  0.679393   \n",
-       "3  0.728355  0.661280  0.638741            ...                  0.735371   \n",
-       "4  0.688429  0.655785  0.628521            ...                  0.697823   \n",
-       "\n",
-       "   eln_gen_cyto  eln_gen_clin  eln_gen_demo  eln_gen_demo_without_age  \\\n",
-       "0      0.650363      0.656621      0.710819                  0.644050   \n",
-       "1      0.654995      0.682280      0.694233                  0.650033   \n",
-       "2      0.656014      0.681972      0.680206                  0.652701   \n",
-       "3      0.661083      0.682071      0.729638                  0.658941   \n",
-       "4      0.659246      0.667764      0.704615                  0.655874   \n",
-       "\n",
-       "   eln_cyto_clin  eln_cyto_demo  eln_cyto_demo_without_age  eln_clin_demo  \\\n",
-       "0       0.661711       0.695218                   0.620679       0.710992   \n",
-       "1       0.678593       0.694395                   0.629919       0.714518   \n",
-       "2       0.674376       0.669782                   0.623687       0.679706   \n",
-       "3       0.679157       0.720786                   0.635338       0.734552   \n",
-       "4       0.648239       0.690501                   0.628312       0.697935   \n",
-       "\n",
-       "   eln_clin_demo_without_age  \n",
-       "0                   0.652423  \n",
-       "1                   0.673006  \n",
-       "2                   0.655560  \n",
-       "3                   0.681378  \n",
-       "4                   0.640082  \n",
-       "\n",
-       "[5 rows x 47 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(25, 26)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1.shape"
    ]
   },
   {
