--- a/analysis/prognosis/Prognosis_locked/Dataframe_Preparation.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Dataframe_Preparation.ipynb
@@ -56,12 +56,12 @@
     "    }\n",
     "}\n",
     "df <- df[,c(1:197,200:215,198:199)]\n",
-    "write.table(df,\"prognosis_dataframe.tsv\")\n"
+    "#write.table(df,\"prognosis_dataframe.tsv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
     "    }\n",
     "}\n",
     "df <- df[,c(1:197,200:215,198:199)]\n",
-    "#write.table(df,\"prognosis_dataframe.tsv\")\n"
+    "write.table(df,\"prognosis_dataframe_full.tsv\")\n"
    ]
   },
   {
