--- a/analysis/prognosis/Prognosis_locked/Analysis_Python.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Analysis_Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "Name: full_component_NPM1, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1381,6 +1381,26 @@
     "\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.05\n",
+    "p_values = []\n",
+    "oddsratios = []\n",
+    "for gene_comut in df_comutations.index:\n",
+    "        wt_wt = df[(df[gene_col]==0) & (df[gene_comut]==0)].shape[0]\n",
+    "        wt_mut = df[(df[gene_col]==0) & (df[gene_comut] == 1)].shape[0]\n",
+    "        mut_wt = df[(df[gene_col]==1) & (df[gene_comut] == 0)].shape[0]\n",
+    "        mut_mut = df[(df[gene_col]==1) & (df[gene_comut] == 1)].shape[0]\n",
+    "\n",
+    "        oddsratio,p_value = fisher_exact(table=[[wt_wt, wt_mut], [mut_wt, mut_mut]], alternative='two-sided')\n",
+    "        p_values.append(p_value)\n",
+    "        oddsratios.append(oddsratio)"
    ]
   },
   {
@@ -1797,45 +1817,6 @@
     "\n",
     "fig.subplots_adjust(left=0.05, bottom=0.10, right=0.92, top=0.90, wspace=2, hspace=1) \n",
     "fig.savefig('graphs/Overall Summary.png' , format='png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inner = gridspec.GridSpecFromSubplotSpec(1, 2, subplot_spec=outer[:5, 15:24],wspace=0)\n",
-    "ax_inner = plt.Subplot(fig, inner[0])\n",
-    "g = sns.barplot(x=df[[c for c in df.columns if ( c.startswith( 'full' ))]].sum().sort_values(ascending=True).values,y=df[[c for c in df.columns if ( c.startswith( 'full' ))]].sum().sort_values(ascending=True).keys(),\n",
-    "                palette=[\"#EE9937\",\"#5C5C5C\",\"#870C14\",\"#BFBFBF\",\"#59A08B\",\"#2b8cbe\",\"#a6bddb\",\"#fdbb84\",\"#e79f00\",\"#000000\",\"darkseagreen\",\"lightskyblue\",\"#0072B2\",\"pink\",\"blue\",\"green\"],ax=ax_inner)\n",
-    "ax_inner.set_title(\"Component Molecular Classification\", fontweight='bold', fontsize=12)\n",
-    "ax_inner.set_xlabel(\"Number of Patients\")\n",
-    "ax_inner.invert_yaxis()\n",
-    "g.set_yticklabels(labels=[i.replace(\"full_component_\", \"\") for i in df[[c for c in df.columns if ( c.startswith( 'full' ))]].sum().sort_values(ascending=True).keys()],fontsize='medium', fontweight='bold')\n",
-    "fig.add_subplot(ax_inner)\n",
-    "\n",
-    "###-------------------------------------------------------------------------------------------------------------------------\n",
-    "inner = gridspec.GridSpecFromSubplotSpec(1, 2, subplot_spec=outer[:5, 25:34],wspace=0)\n",
-    "ax_inner = plt.Subplot(fig, inner[0])\n",
-    "\n",
-    "tmp =pd.DataFrame(columns=[\"full_component\",\"os\"])\n",
-    "for col in [c for c in df.columns if ( c.startswith( 'full' ))]:\n",
-    "    tmp_bis=pd.DataFrame(columns=[\"full_component\",\"os\",\"os_status\"])\n",
-    "    tmp_bis.os=df[(df[col]==1)].os\n",
-    "    tmp_bis.os_status=df.loc[(df[col]==1)].os_status\n",
-    "    tmp_bis[tmp_bis.os_status==0].os=tmp_bis[tmp_bis.os_status==0].os + tmp_bis.os.std()\n",
-    "    tmp_bis.full_component=col\n",
-    "    tmp = tmp.append(tmp_bis)\n",
-    "g = sns.boxplot(x=\"os\",y=\"full_component\",data=tmp,order=tmp.groupby(\"full_component\").mean().sort_values(by=\"os\").index,ax=ax_inner,\n",
-    "                palette=[],\n",
-    "               showfliers=False)\n",
-    "ax_inner.set_title(\"Survival Time by Molecular Component\", fontweight='bold', fontsize=12)\n",
-    "ax_inner.set_xlabel(\"Survival Time Predicted (years)\")\n",
-    "ax_inner.set_ylabel(\"\")\n",
-    "ax_inner.invert_yaxis()\n",
-    "g.set_yticklabels(labels=[i.replace(\"full_component_\", \"\") for i in tmp.groupby(\"full_component\").mean().sort_values(by=\"os\").index],fontsize='medium', fontweight='bold')\n",
-    "fig.add_subplot(ax_inner)"
    ]
   }
  ],
