--- a/analysis/clustering/clustering_Final_1/Final_Full_Analysis_ITD.ipynb
+++ b/analysis/clustering/clustering_Final_1/Final_Full_Analysis_ITD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,6 +153,7 @@
     }
    ],
    "source": [
+    "# pdf(file=\"graphs/component_repartition.pdf\",width=12,height=18)\n",
     "cols_component <- colnames(df_final %>% dplyr:: select(starts_with(\"full_component_\")))\n",
     "df_tmp <- setNames(data.frame(matrix(ncol = length(col_list), nrow = length(col_list))), gsub(\"full_component_\",\"\",col_list))\n",
     "rownames(df_tmp) <- gsub(\"full_component_\",\"\",col_list)\n",
@@ -205,7 +206,8 @@
     "plot.title=element_text(size=25,face=\"bold\",hjust=0.5))+\n",
     "guides(fill = guide_colorbar(barwidth = 7, barheight = 1,\n",
     "            title.position = \"top\", title.hjust = 0.5))+\n",
-    "ggtitle(\"Component Repartition\")"
+    "ggtitle(\"Component Repartition\")\n",
+    "# dev.off()"
    ]
   },
   {
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +367,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# pdf(file=\"graphs/eln_comp_surv.pdf\",width=20,height=12)\n",
     "cols_component <- colnames(df_final %>% dplyr:: select(starts_with(\"full_component_\")))\n",
     "colors <- c(\"black\",\"gray1\",\"grey45\", \"#e79f00\", \"#009E73\",\"#0072B2\",  \"#CC79A7\",\n",
     "        \"#9ad0f3\", \"#D55E00\", \n",
@@ -400,7 +402,8 @@
     "                                label = c(\"CEBPA_bi_ITD\",\"WT1_ITD\",\"t_6_9_ITD\",\"DNMT3A_IDH1_2_ITD\",\"inv_3\",\"t_6_9\",\"TP53_complex\",\"additions\",\"chr_splicing_multiple\",\"Adverse ELN\",\"Intermediate ELN\",\n",
     "                                          \"Favorable ELN\",\"CEBPA_bi\",\"inv_16\",\"t_8_21\",\"t_15_17\"), size = 5)\n",
     "set_notebook_plot_size(20,6)\n",
-    "p$table"
+    "p$table\n",
+    "# dev.off()"
    ]
   },
   {
