--- a/analysis/clustering/clustering_Final_1/Density_Volcano.ipynb
+++ b/analysis/clustering/clustering_Final_1/Density_Volcano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
     "    colors_analysis <- c(gen=\"#BFBFBF\",cyto=\"#2b8cbe\")\n",
     "    df <- df[order(df$adjusted_pvalue),]\n",
     "    s <- ggplot(df, aes(log2(hazard), -log10(adjusted_pvalue))) + #volcanoplot with log2Foldchange versus pvalue\n",
-    "        geom_point(aes(size=Frequency,col=Model)) + geom_text_repel(data=df[df[\"adjusted_pvalue\"]<0.1,], aes(label=names,fontface=2))+scale_size_continuous(range = c(3,12)) + \n",
+    "        geom_point(aes(size=Frequency,col=Model)) + geom_text_repel(data=df[(df[\"adjusted_pvalue\"]<0.1) | (df[\"log2(hazard)\"]< -18),], aes(label=names,fontface=2))+scale_size_continuous(range = c(3,12)) + \n",
     "         scale_color_manual(values=colors_analysis,limits=names(colors_analysis))+  ## respect color in feature importance\n",
     "        theme(plot.title = element_text(hjust = 0.5,size=25),axis.text=element_text(size=12),axis.title=element_text(size=14,face=\"bold\"))  + theme(legend.position=\"top\")\n",
     "\n",
