--- a/analysis/prognosis/Prognosis_locked/Dose_Intensification/Bootstrap_intense/Untitled.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Dose_Intensification/Bootstrap_intense/Untitled.ipynb
@@ -2,114 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: magrittr\n",
-      "Loading required package: Matrix\n",
-      "Loading required package: foreach\n",
-      "Loaded glmnet 2.0-16\n",
-      "\n",
-      "Loading required package: iterators\n",
-      "Loading required package: parallel\n",
-      "\n",
-      "Attaching package: ‘data.table’\n",
-      "\n",
-      "The following objects are masked from ‘package:reshape2’:\n",
-      "\n",
-      "    dcast, melt\n",
-      "\n",
-      "Loading required package: prodlim\n",
-      "\n",
-      " randomForestSRC 2.9.0 \n",
-      " \n",
-      " Type rfsrc.news() to see new features, changes, and bug fixes. \n",
-      " \n",
-      "\n",
-      "Loading required package: RColorBrewer\n",
-      "Loading required package: lattice\n",
-      "Loading required package: Formula\n",
-      "\n",
-      "Attaching package: ‘Hmisc’\n",
-      "\n",
-      "The following object is masked from ‘package:randomForestSRC’:\n",
-      "\n",
-      "    impute\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    format.pval, units\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "The following object is masked from ‘package:gridExtra’:\n",
-      "\n",
-      "    combine\n",
-      "\n",
-      "The following objects are masked from ‘package:Hmisc’:\n",
-      "\n",
-      "    src, summarize\n",
-      "\n",
-      "The following objects are masked from ‘package:data.table’:\n",
-      "\n",
-      "    between, first, last\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘tidyr’\n",
-      "\n",
-      "The following object is masked from ‘package:mltools’:\n",
-      "\n",
-      "    replace_na\n",
-      "\n",
-      "The following object is masked from ‘package:Matrix’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
-      "The following object is masked from ‘package:magrittr’:\n",
-      "\n",
-      "    extract\n",
-      "\n",
-      "The following object is masked from ‘package:reshape2’:\n",
-      "\n",
-      "    smiths\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.2.1 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 2.1.3     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 2.1.3     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.4.0\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32maccumulate()\u001b[39m masks \u001b[34mforeach\u001b[39m::accumulate()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mbetween()\u001b[39m    masks \u001b[34mdata.table\u001b[39m::between()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcombine()\u001b[39m    masks \u001b[34mgridExtra\u001b[39m::combine()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mexpand()\u001b[39m     masks \u001b[34mMatrix\u001b[39m::expand()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mextract()\u001b[39m    masks \u001b[34mmagrittr\u001b[39m::extract()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m     masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfirst()\u001b[39m      masks \u001b[34mdata.table\u001b[39m::first()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m        masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlast()\u001b[39m       masks \u001b[34mdata.table\u001b[39m::last()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mpartial()\u001b[39m    masks \u001b[34mrandomForestSRC\u001b[39m::partial()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mreplace_na()\u001b[39m masks \u001b[34mmltools\u001b[39m::replace_na()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mset_names()\u001b[39m  masks \u001b[34mmagrittr\u001b[39m::set_names()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32msrc()\u001b[39m        masks \u001b[34mHmisc\u001b[39m::src()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32msummarize()\u001b[39m  masks \u001b[34mHmisc\u001b[39m::summarize()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mtranspose()\u001b[39m  masks \u001b[34mdata.table\u001b[39m::transpose()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mwhen()\u001b[39m       masks \u001b[34mforeach\u001b[39m::when()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library('ggplot2')\n",
     "library('reshape2')\n",
@@ -121,14 +16,12 @@
     "library(mltools)\n",
     "library(CoxBoost)\n",
     "library(randomForestSRC)\n",
-    "library(CoxHD)\n",
     "library(Hmisc)\n",
     "library(gridExtra)\n",
     "library(\"survminer\")\n",
     "library(dplyr)\n",
     "library(broom)\n",
     "library(tidyr)\n",
-    "library(tidyverse)\n",
     "source(\"../../../../../src/tools.R\")\n",
     "source('../../../tools_prognosis/run_prognosis.R')\n",
     "\n",
@@ -283,40 +176,7 @@
     "                tmp_1 <- bootstrap  %>% group_by(feature) %>% summarise_all(sum)\n",
     "                tmp_2 <- bootstrap  %>% group_by(feature) %>% count(feature)\n",
     "                print(paste(paste(names(prognosis_features)[i],paste(algo,alpha,sep=\"_\"),sep=\"_bootstrap_\"),\".tsv\",sep=\"\"))\n",
-    "                write.table(data.frame(merge(tmp_1,tmp_2,by='feature')),paste(paste(names(prognosis_features)[i],paste(algo,alpha,sep=\"_\"),sep=\"_bootstrap_\"),\".tsv\",sep=\"\"),quote=F,sep='\\t')\n",
-    "\n",
-    "                if (alpha==0.7){\n",
-    "                    tmp_1_pos <- tmp_1[tmp_1$coef>0,]\n",
-    "                    tmp_1_neg <-  tmp_1[tmp_1$coef<0,]\n",
-    "                    features_reduced <- union(union(tmp_1_pos[tmp_1_pos$coef > quantile(tmp_1_pos$coef,0.90),]$feature,tmp_1_neg[tmp_1_neg$coef < quantile(tmp_1_neg$coef,0.15),]$feature),tmp_2[tmp_2$n > quantile(tmp_2$n,0.85),]$feature)\n",
-    "                    if (length(features_reduced)<2){features_reduced <- union(union(tmp_1_pos[tmp_1_pos$coef > quantile(tmp_1_pos$coef,0.90),]$feature,tmp_1_neg[tmp_1_neg$coef < quantile(tmp_1_neg$coef,0.15),]$feature)\n",
-    "                                                                              ,tmp_2[tmp_2$n > 0,]$feature)}\n",
-    "                    print(features_reduced)\n",
-    "\n",
-    "                    predictors <- c(rep(list(predictorGLM),11),rep(list(predictorRF),1),predictorBoost,predictorRFX)\n",
-    "                    str_predictors <-c(rep(\"CoxGLM\",11),\"RFS\",\"CoxBoost\",\"RFX\")\n",
-    "                    l_alpha <-seq(0,1,0.1)\n",
-    "                    l_ntree <- c(10)\n",
-    "                    mc.cores <- 50\n",
-    "                    nodesize <- c(20)\n",
-    "                    print(\"DONE\")\n",
-    "                    write.table(launch_prognosis(data.matrix(df_final[,features_reduced]),y=y,predictors=predictors,str_predictors=str_predictors,l_alpha=l_alpha,nrepeats=2,l_ntree=l_ntree,nodesize=nodesize,\n",
-    "                                mc.cores=mc.cores),\"test.tsv\",quote=F,sep='\\t')\n",
-    "                    print(\"DONE\")\n",
-    "                }\n",
-    "            }\n",
-    "        } else {\n",
-    "                print(algo)\n",
-    "                if(algo==\"rfs\"){\n",
-    "                    bootstrap <- bootstrapping(prognosis_features[[i]],x,y,10,0.7,8,algo)\n",
-    "                }else {\n",
-    "                    bootstrap <- bootstrapping(prognosis_features[[i]],x,y,100,0.7,8,algo)\n",
-    "                    tmp_1 <- bootstrap  %>% group_by(feature) %>% summarise_all(sum)\n",
-    "                    tmp_2 <- bootstrap  %>% group_by(feature) %>% count(feature)\n",
-    "                    }\n",
-    "\n",
-    "                write.table(data.frame(merge(tmp_1,tmp_2,by='feature')),\"test.tsv\",quote=F,sep='\\t')\n",
-    "    print ('next')\n",
+    "                write.table(data.frame(merge(tmp_1,tmp_2,by='feature')),\"TESTS.tsv\",quote=F,sep='\\t')\n",
     "        }\n",
     "    }\n",
     "}"
