--- a/analysis/clustering/clustering_Final_1/Component_Prep.ipynb
+++ b/analysis/clustering/clustering_Final_1/Component_Prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,8 @@
     "\n",
     "# Handling additions\n",
     "df[df$full_component_additions==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_inv_3==1 | df$full_component_NPM1==1 | df$full_component_CEBPA_bi==1 | df$full_component_DNMT3A_IDH1_2==1 | df$full_component_WT1==1 ),\"full_component_additions\"] <- 0\n",
-    "df[df$full_component_additions==1 & (df$full_component_TP53_complex==1) & (df$del_7==1 | df$del_17==1 | df$del_5==1 | df$del_9==1 |df$del_13==1 | df$del_20==1 | df$del_18==1 | df$del_16==1 | df$del_12==1 | df$del_3==1),\"full_component_additions\"] <- 1\n",
+    "\n",
+    "df[df$full_component_additions==1 & (df$full_component_TP53_complex==1) & !(df$del_7==1 | df$del_17==1 | df$del_5==1 | df$del_9==1 |df$del_13==1 |df$del_20==1 | df$del_18==1 | df$del_16==1 | df$del_12==1 | df$del_3==1 | df$minusy==1),\"full_component_additions\"] <- 0   ### overlap with no deletions are 0\n",
     "\n",
     "# Handling DNMT3A IDH\n",
     "df[df$full_component_DNMT3A_IDH1_2==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 | df$full_component_CEBPA_bi==1 | df$full_component_additions==1 ),\"full_component_DNMT3A_IDH1_2\"] <- 0\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,14 +210,14 @@
     "df <- na.omit(df)\n",
     "df <- df[df$os>0,]\n",
     "\n",
-    "# Handling additions\n",
+    "# Handling additions   (for overlap with tp53 we want at least one deletion)\n",
     "df[df$full_component_additions==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 |df$full_component_t_8_21_ITD==1 |\n",
     "                                     df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 |\n",
     "                                     df$full_component_NPM1==1 |df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 |\n",
     "                                     df$full_component_DNMT3A_IDH1_2==1 | df$full_component_DNMT3A_IDH1_2_ITD==1 | df$full_component_WT1==1 | df$full_component_WT1_ITD==1),\"full_component_additions\"] <- 0\n",
     "\n",
-    "df[df$full_component_additions==1 & (df$full_component_TP53_complex==1) & (df$del_7==1 | df$del_17==1 | df$del_5==1 | df$del_9==1 |df$del_13==1 |\n",
-    "                                                                           df$del_20==1 | df$del_18==1 | df$del_16==1 | df$del_12==1 | df$del_3==1),\"full_component_additions\"] <- 1\n",
+    "df[df$full_component_additions==1 & (df$full_component_TP53_complex==1) & !(df$del_7==1 | df$del_17==1 | df$del_5==1 | df$del_9==1 |df$del_13==1 |\n",
+    "                                                                           df$del_20==1 | df$del_18==1 | df$del_16==1 | df$del_12==1 | df$del_3==1 | df$minusy==1),\"full_component_additions\"] <- 0   ### overlap with no deletions are 0\n",
     "\n",
     "# Handling DNMT3A IDH\n",
     "df[df$full_component_DNMT3A_IDH1_2==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_8_21_ITD==1 | df$full_component_t_11==1 |\n",
@@ -248,6 +249,27 @@
     "df$eln_2017 <- ifelse(df$eln_2017==\"adverse\",1,\n",
     "                    ifelse(df$eln_2017==\"intermediate\",2,3))\n",
     "write.table(df,\"df_final_full_component_ITD.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "   0    1 \n",
+       "1933  192 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(df$full_component_additions)"
    ]
   },
   {
